fix issue of text jump

--- a/app/assets/stylesheets/teacher_sets.css.scss
+++ b/app/assets/stylesheets/teacher_sets.css.scss
@@ -657,3 +657,17 @@
 .subject-music i:before {
   content: "\f001"; // musics
 }
+
+.fa-caret-down:before, .fa-caret-right:before {
+  position: absolute;
+  margin-top: .2em;
+}
+
+
+.fa{
+  display: inline;
+}
+
+.facet-label{
+margin-left: .7em;
+}
